# NotifyByWebApp

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  LICENSE  README.md  notify_core.py  notify_icons.py  notify_pages.py  notify_vendor.py  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
api/: index.py
scripts/: embed_icons.py  generate_vapid_keys.py  make_icons.ps1
tests/: conftest.py  pushkit.py  test_api.py  test_core.py  test_push_e2e.py  test_storage_http.py  test_ui_notifications.py  test_ui_platforms.py  test_ui_playwright.py  uikit.py
