[project]
name = "notify-by-web-app"
version = "0.1.0"
description = "Lightweight PWA: subscribe to message channels via secure codes, receive Web Push notifications"
requires-python = ">=3.10"
dependencies = [
    "pywebpush>=2.0.3",
    "requests>=2.31",
]

[tool.vercel]
entrypoint = "api.index:handler"
